--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Sainath's Personal Site</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="icon" href="css/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,17 +16,17 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
     <h1>I'm Sainath Tallam</h1>
     <h2 style="font-weight:normal">a <span class="pro">pro</span>grammer</h2>
 
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img src="mountain.png" alt="mountain-image">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/sainath.png" alt="sainath's pic" width=300 style="border-radius:100%; margin-top:30px">
+      <img src="sainath.png" alt="sainath's pic" width=300 style="border-radius:100%; margin-top:30px">
       <h2>Hello.</h2>
       <p>I am a Competitive Programmer&#127775;. I &#129505; listening to songs. I am a Foodie&#128523;. Always ready for a debate&#128579;.Always a learner&#128519;</p>
     </div>
