--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           and a <strong><span class="star">3-star</span></strong> coder at <a href="https://www.codechef.com/users/sainathtallam">Codechef</a>. </p>
       </div>
       <div class="skill-row" >
-        <img class="" src="images/design.webp" alt="">
+        <img class="" src="design.webp" alt="">
         <h3>Design and Development</h3>
         </h3>
         <p>I started learning Web Development recently. I'm a beginner in Machine Learning</p>
