--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/sainathtallam/">LinkedIn</a>
     <p> </p>
-    <a class="footer-link" href="https://sainathtallam.github.io/cv/">Professional Website</a>
+    <a class="footer-link" href="https://sainathtallam.github.io/Project_2_cv2.0/">Professional Website</a>
     <p>© 2021 Sainath Tallam</p>
   </div>
 
