--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="profile">
       <img src="sainath.png" alt="sainath's pic" width=300 style="border-radius:100%; margin-top:30px">
       <h2>Hello.</h2>
-      <p>I am a Competitive Programmer&#127775;. I &#129505; listening to songs. I am a Foodie&#128523;. Always ready for a debate&#128579;.Always a learner&#128519;</p>
+      <p>I am a Competitive Programmer&#127775;. I &#129505; listening to songs. I am a Foodie&#128523;.<!-- Always ready for a debate&#128579;-->.Always a learner&#128519;</p>
     </div>
     <hr>
     <div class="skills" align="center">
